Initial pages for Lightning

--- a/themes/elements/layout/partials/menu.jade
+++ b/themes/elements/layout/partials/menu.jade
@@ -1,6 +1,7 @@
 a.header.item(href="/") The Elements Project
 a.item(href="/elements") Elements
 a.item(href="/sidechains") Sidechains
+a.item(href="/projects") Projects
 a.item(href="/contributing") Community
 a.item(href="/posts") Blog
 .right.menu
